--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -14,13 +14,22 @@
     </a>
   </div>
 
+
   <div class="logo-assinatura">
     <img class="logo" src="assets/svg/logo.svg">
     <img class="assinatura animated jackInTheBox" src="assets/svg/assinatura.svg">
   </div>
 
-  <div>
+  <!--  <div>
     <button>Home</button>
     <button>Contato</button>
+  </div>  -->
+  <div class="button-group">
+    <button class="super-button">
+      <span>Home</span>
+    </button>
+    <button class="super-button">
+      <span>Contato</span>
+    </button>
   </div>
 </header>
