--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="voadora-header">
+<header class="voadora-header header-bg">
   <div>
     <a href="#" class="media-link">
       <i class="fab fa-instagram sociais"></i>
@@ -20,10 +20,6 @@
     <img class="assinatura animated jackInTheBox" src="assets/svg/assinatura.svg">
   </div>
 
-  <!--  <div>
-    <button>Home</button>
-    <button>Contato</button>
-  </div>  -->
   <div class="button-group">
     <button class="super-button">
       <span>Home</span>
@@ -33,3 +29,4 @@
     </button>
   </div>
 </header>
+
