--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="voadora-header header-bg">
-  <div>
+  <div class="nav-links">
     <a href="#" class="media-link">
       <i class="fab fa-instagram sociais"></i>
     </a>
@@ -14,10 +14,9 @@
     </a>
   </div>
 
-
-  <div class="logo-assinatura">
+  <div class="logo-assinatura animated bounceIn">
     <img class="logo" src="assets/svg/logo.svg">
-    <img class="assinatura animated jackInTheBox" src="assets/svg/assinatura.svg">
+    <img class="assinatura" src="assets/svg/assinatura.svg">
   </div>
 
   <div class="button-group">
